# mylogger

./: .gitignore  .pylintrc  LICENSE  README.md  example_config.cfg  pyproject.toml
mylogger/: __init__.py  configuration.py  logger.py  utils.py
tests/: test_config.cfg  test_logger.py
