[project]
name = "mylogger"
version = "0.1.4"
authors = [{ name = "Sven Upgang" }]
description = "A wrapper for python logging to be reused in private projects"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pylint>=3.3.1",
]
